@@ -1,10 +1,0 @@
-CSacek recodes the documents on-fly from server code set to the client code
-set. It can also recode client data to the server code set, so that other
-server modules or CGI programs get the data in one consistent code set.
-CSacek can compress the data as sent to client, if client supports it.
-
-Currently supported code sets are the center-europian ones (iso-8859-2,
-windows-1250, macce, cp852 & bunch of already obsoleted code sets). There
-is also limited support for cyrillic (koi8-r, iso-8859-5, cp866).
-
-Documentation is currently in czech language only.
